Refactor: Simplify SykemeldingPostCommand response mapping and add logging in SykemeldingClient